[package]
name = "easy_esp"
version = "0.2.4"
edition = "2021"
description = "Wrapper around socket functionality to make using devices safer and easier"
license = "MIT"

[lib]
name = "easy_esp"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/bin.rs"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
