[package]
name = "easy_esp"
version = "0.4.0"
edition = "2021"
description = "Wrapper around socket functionality to make using devices safer and easier"
license = "MIT"

[lib]
name = "easy_esp"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/bin.rs"

[dependencies]
chrono = "0.4.38"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["rt", "net", "sync", "macros", "rt-multi-thread"] }
